crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_view_sql_text_search_filters.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 890,
    "answer": "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume.",
    "_score": 7.522
  }
]
