crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_view_sql_text_search_filters_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(_score, 3) as _score FROM text_search(qs, 'secondary') where subject!='math' order by _score desc LIMIT 4"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                 |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, fetch=4                                                                                                                               |
|               |   Projection: text_search(qs, Utf8("secondary")).id, text_search(qs, Utf8("secondary")).answer, trunc(text_search(qs, Utf8("secondary"))._score, Int64(3)) AS _score |
|               |     TableScan: text_search(qs, Utf8("secondary")) projection=[_score, answer, id], full_filters=[text_search(qs, Utf8("secondary")).subject != Utf8("math")]         |
| physical_plan | SortPreservingMergeExec: [_score@2 DESC], fetch=4                                                                                                                    |
|               |   SortExec: TopK(fetch=4), expr=[_score@2 DESC], preserve_partitioning=[true]                                                                                        |
|               |     ProjectionExec: expr=[id@2 as id, answer@1 as answer, trunc(_score@0, 3) as _score]                                                                              |
|               |       ProjectionExec: expr=[_score@1 as _score, answer@2 as answer, id@0 as id]                                                                                      |
|               |         HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2]                 |
|               |           CoalescePartitionsExec                                                                                                                                     |
|               |             BytesProcessedExec                                                                                                                                       |
|               |               RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                   |
|               |                 FullTextSearchTableExec q=secondary, limit=1000                                                                                                      |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                       |
|               |             ProjectionExec: expr=[answer@0 as answer, id@1 as id]                                                                                                    |
|               |               SchemaCastScanExec                                                                                                                                     |
|               |                 CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0                                                                                        |
|               |                   FilterExec: subject@2 != math                                                                                                                      |
|               |                     BytesProcessedExec                                                                                                                               |
|               |                       DataSourceExec: partitions=1, partition_sizes=[2]                                                                                              |
|               |                                                                                                                                                                      |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
