crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_view_sql_text_search_projection.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 9,
    "answer": "The statement \"T minus 50 seconds\" indicates that there are $\\boxed{50 \\text{ seconds}}$ remaining until lift-off.",
    "question": "A Mission Control Officer at Cape Canaveral makes the statement \"lift-off, T minus 50 seconds.\" How long is it before lift-off?",
    "subject": "math",
    "_score": 8.215
  },
  {
    "id": 525,
    "answer": "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]",
    "question": "In a group of 3 machines where 2 are faulty, what is the probability that the first two machines tested are both faulty?",
    "subject": "math",
    "_score": 5.991
  },
  {
    "id": 772,
    "answer": "The degree of the differential equation is \\(\\boxed{2}\\), as the highest derivative present is the second derivative \\( y'' \\).",
    "question": "State the degree of the differential equation:\n$$\ny^{\\prime \\prime} = 6x + \\sin x\n$$",
    "subject": "math",
    "_score": 5.86
  }
]
