crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_view_sql_text_search_projection_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, question, subject, trunc(_score, 3) as _score FROM text_search(qs, 'second') order by _score desc LIMIT 4"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                           |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, fetch=4                                                                                                                                                                                                         |
|               |   Projection: text_search(qs, Utf8("second")).id, text_search(qs, Utf8("second")).answer, text_search(qs, Utf8("second")).question, text_search(qs, Utf8("second")).subject, trunc(text_search(qs, Utf8("second"))._score, Int64(3)) AS _score |
|               |     TableScan: text_search(qs, Utf8("second")) projection=[_score, answer, id, question, subject]                                                                                                                                              |
| physical_plan | SortPreservingMergeExec: [_score@4 DESC], fetch=4                                                                                                                                                                                              |
|               |   SortExec: TopK(fetch=4), expr=[_score@4 DESC], preserve_partitioning=[true]                                                                                                                                                                  |
|               |     ProjectionExec: expr=[id@2 as id, answer@1 as answer, question@3 as question, subject@4 as subject, trunc(_score@0, 3) as _score]                                                                                                          |
|               |       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                     |
|               |         ProjectionExec: expr=[_score@1 as _score, answer@2 as answer, id@0 as id, question@3 as question, subject@4 as subject]                                                                                                                |
|               |           HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2, question@4, subject@5]                                                                  |
|               |             CoalescePartitionsExec                                                                                                                                                                                                             |
|               |               CooperativeExec                                                                                                                                                                                                                  |
|               |                 BytesProcessedExec                                                                                                                                                                                                             |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                         |
|               |                     FullTextSearchTableExec q=second, limit=1000                                                                                                                                                                               |
|               |             SchemaCastScanExec                                                                                                                                                                                                                 |
|               |               CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0                                                                                                                                                                    |
|               |                 BytesProcessedExec                                                                                                                                                                                                             |
|               |                   DataSourceExec: partitions=1, partition_sizes=[2]                                                                                                                                                                            |
|               |                                                                                                                                                                                                                                                |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
