crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_view_sql_text_search_random.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "subject": "math"
  },
  {
    "subject": "math"
  },
  {
    "subject": "math"
  }
]
